...
                    }
                },
                title = {
                    Column {
                        Row(verticalAlignment = Alignment.CenterVertically, horizontalArrangement = Arrangement.spacedBy(6.dp)) {
                            Text(
                                text = "MANDO DE SERVIDORES LINUX & WINDOWS",
                                fontSize = 13.sp,
                                fontWeight = FontWeight.Bold,
                                color = TacticalCyanPrimary,
                                fontFamily = FontFamily.Monospace
                            )
                            Surface(
...
